[gd_scene load_steps=12 format=3 uid="uid://cfmsgewyvhf47"]

[ext_resource type="Script" uid="uid://bqagji1ioim44" path="res://Scripts/fucker.gd" id="1_8jy7u"]
[ext_resource type="Texture2D" uid="uid://bpxtd6ioxe0ks" path="res://Assets/Fucker/Screaming_Fucker_WIP-Sheet.png" id="2_8jy7u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_46dx1"]
atlas = ExtResource("2_8jy7u")
region = Rect2(0, 0, 300, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv61g"]
atlas = ExtResource("2_8jy7u")
region = Rect2(300, 0, 300, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_as6cn"]
atlas = ExtResource("2_8jy7u")
region = Rect2(600, 0, 300, 450)

[sub_resource type="SpriteFrames" id="SpriteFrames_xaqun"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46dx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv61g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as6cn")
}],
"loop": true,
"name": &"screaming",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adw80"]
size = Vector2(414, 527)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwcaj"]
size = Vector2(306, 470)

[sub_resource type="Animation" id="Animation_46dx1"]
length = 0.001

[sub_resource type="Animation" id="Animation_8jy7u"]
resource_name = "walking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fucker_Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2.2974, 0.466517, 2.07053),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 50), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fv61g"]
_data = {
&"RESET": SubResource("Animation_46dx1"),
&"walking": SubResource("Animation_8jy7u")
}

[node name="Fucker" type="Node2D"]
script = ExtResource("1_8jy7u")

[node name="Fucker_Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xaqun")
animation = &"screaming"
autoplay = "screaming"
frame_progress = 0.821282
centered = false

[node name="Fucker_Graze_Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fucker_Graze_Hitbox"]
position = Vector2(151, 225)
shape = SubResource("RectangleShape2D_adw80")
debug_color = Color(0.998407, 0, 0.142817, 0.42)

[node name="Fucker_HitBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fucker_HitBox"]
position = Vector2(151, 225)
shape = SubResource("RectangleShape2D_jwcaj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fv61g")
}
autoplay = "walking"

[connection signal="mouse_entered" from="Fucker_Graze_Hitbox" to="." method="_on_fucker_graze_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Fucker_Graze_Hitbox" to="." method="_on_fucker_graze_hitbox_mouse_exited"]
[connection signal="mouse_entered" from="Fucker_HitBox" to="." method="_on_fucker_hit_box_mouse_entered"]
[connection signal="mouse_exited" from="Fucker_HitBox" to="." method="_on_fucker_hit_box_mouse_exited"]
